--- a/packages/landing/package.json
+++ b/packages/landing/package.json
@@ -30,7 +30,7 @@
     "rc-drawer": "^6.0.0",
     "rc-progress": "^3.4.1",
     "rc-tabs": "11.10.1",
-    "react": "^18.2.0",
+    "react": "16.14.0",
     "react-accessible-accordion": "5.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-aria-menubutton": "^7.0.3",
@@ -38,7 +38,7 @@
     "react-content-loader": "^6.2.0",
     "react-countdown-now": "^2.1.2",
     "react-countup": "^6.3.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.0",
     "react-icons-kit": "^2.0.0",
     "react-id-swiper": "^4.0.0",
     "react-image": "^4.0.3",
@@ -56,12 +56,14 @@
     "react-select": "^5.6.0",
     "react-slick": "^0.29.0",
     "react-stickynode": "4.1.0",
+    "react-scripts": "3.4.3",
     "react-tabs": "^5.1.0",
     "react-tsparticles": "^2.5.1",
     "react-waypoint": "10.3.0",
     "styled-components": "^5.3.6",
     "styled-system": "5.1.5",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "mdbreact": "4.27.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
